--- a/Dog Adoption/DogTableViewCell.xib
+++ b/Dog Adoption/DogTableViewCell.xib
@@ -15,21 +15,21 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="199"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T7W-np-qcz">
                         <rect key="frame" x="10" y="5" width="300" height="189.5"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fN-gk-yUN">
-                        <rect key="frame" x="15" y="139" width="84.5" height="60.5"/>
+                        <rect key="frame" x="15" y="134" width="84.5" height="60.5"/>
                         <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="50"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="3fN-gk-yUN" secondAttribute="bottom" id="443-FA-T6Q"/>
+                    <constraint firstAttribute="bottom" secondItem="3fN-gk-yUN" secondAttribute="bottom" constant="5" id="443-FA-T6Q"/>
                     <constraint firstItem="3fN-gk-yUN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="66I-Hz-8hk"/>
                     <constraint firstItem="T7W-np-qcz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="KFG-VJ-qyn"/>
                     <constraint firstAttribute="bottom" secondItem="T7W-np-qcz" secondAttribute="bottom" constant="5" id="XuE-40-xr5"/>
